...
    "Escolhido a partir do seu Exame": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Chosen from your Examen"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Elegido a partir de tu Examen"
...
    },
    "O que você escreveu pede cuidado": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "What you wrote calls for care"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Lo que escribiste pide cuidado"
...
    },
    "Personalizar com o que você escreve?": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Personalize with what you write?"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "¿Personalizar con lo que escribes?"
...
    "Por hoje, é só isso.": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "That's all for today."
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Por hoy, esto es todo."
...
